TEST: update webpack to work with heroku

--- a/app/views/home/result.html.erb
+++ b/app/views/home/result.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-6">
-            <small class="text-muted">Días hábiles son lunes a viernes que no son feriados</small>
+            <small class="text-muted">Días hábiles son lunes a viernes no feriados</small>
         </div>
     </div>
     <div class="row justify-content-center">
