--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-6">
-            <p class="text-muted">Deja de contar los días a mano como en el pasado. Ingresa la fecha de inicio, los días hábiles y te decimos cuándo tienes que entregar ese proyecto</p>
+            <p class="text-muted">Deja de contar los días a mano como en el pasado. Ingresa la fecha de inicio, la cantidad de días hábiles y te decimos cuál es la fecha de cierre</p>
             <small class="text-muted">Usamos la lista de <a href="http://www.feriadoschilenos.cl/">feriados chilenos</a></small>
         </div>
     </div>
